# Elixir

./: .gitignore  FUTURE_WORK.md  README.md  next.config.ts  package-lock.json  package.json  prompts.yaml  vercel.json
app/: page.tsx
app/dashboard/: page.tsx
app/fullstory/: page.tsx
app/journey/: page.tsx
backend/: .dockerignore  .env.example  Dockerfile  Procfile  README.md  pyproject.toml  railway.json  requirements.txt  vercel.json
backend/store/: episodic_journey_report_final.md  full_conversation_log.json
components/: EpisodeDetails.tsx  EpisodeHero.tsx  EventDetails.tsx  ExperimentCard.tsx  HrvChart.tsx  InsightsCard.tsx  MemberSnapshot.tsx  NarrativePanel.tsx  Navbar.tsx  TimelineView.tsx
data/: journey.json
elyxproject/: README.md  narrative_plan.json  pyproject.toml  report.md  requirements.txt
elyxproject/src/elyxproject/: agents.py  crew.py  main.py  memory.py  models.py  orchestrator.py  rag_pipeline.py  run_phase1.py  run_phase2.py  run_phase3.py  tasks.py
elyxproject/src/elyxproject/config/: agents.yaml  tasks.yaml
elyxproject/src/elyxproject/knowledge/: hackathon_context.yaml
elyxproject/store/: conversation_whatsapp.txt  narrative_plan.json  structured_data.json
elyxproject/store/old data/: narrative_plan2.json
elyxproject/store/old data/output 1/: full_conversation_log.json
elyxproject/store/vector_memory/: chroma.sqlite3
frontend/: .env.example  .gitignore  package-lock.json  package.json  structured_data_clean.json
frontend/.next/: app-build-manifest.json  trace  (+1 more)
types/: journey.ts
utils/: metrics.ts
(+146 files in other folders)
