[project]
name = "elyxproject"
version = "0.1.0"
description = "elyxproject using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0"
]

[project.scripts]
elyxproject = "elyxproject.main:run"
run_crew = "elyxproject.main:run"
train = "elyxproject.main:train"
replay = "elyxproject.main:replay"
test = "elyxproject.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
